--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -1,10 +1,11 @@
 :root {
+  --radar-green: hsla(120, 100%, 47%, 0.42);
+
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: hsl(233, 15%, 11%);
 
