--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -20,15 +20,23 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 1rem;
+  display: flex;
+  gap: 2rem;
+  place-items: center;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1280px) {
+  #app {
+    flex-direction: column;
+  }
 }
 
 /* Scrollbar styles */
